--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build ",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,7 +14,9 @@
     "@rainbow-me/rainbowkit": "^2.2.1",
     "@tanstack/react-query": "^5.62.3",
     "@tanstack/react-table": "^8.20.5",
+    "@yudiel/react-qr-scanner": "^2.0.8",
     "axios": "^1.7.9",
+    "better-sqlite3": "^11.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dnum": "^2.14.0",
@@ -27,7 +29,11 @@
     "qrcode.react": "^4.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
+    "react-qr-reader": "3.0.0-beta-1",
+    "react-qr-scanner": "1.0.0-alpha.11",
+    "react-router-dom": "^7.0.2",
     "sonner": "^1.7.1",
     "use-debounce": "^10.0.4",
     "viem": "~2.21.54",
@@ -35,6 +41,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.62.1",
+    "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
